Add key parameter in flag handlers
